--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,33 @@
+
+
+
+@article{Anderson2006,
+  author =	 {Anderson, Marti J.},
+  title =	 {Distance-based tests for homogeneity of multivariate
+                  dispersions},
+  journal =	 {Biometrics},
+  volume =	 62,
+  pages =	 {245--253},
+  doi =		 {10.1111/j.1541-0420.2005.00440.x},
+  year =	 2006
+}
+
+
+
+@article{Anderson2001,
+  author =	 {Anderson, Marti J.},
+  title =	 {A new method for non-parametric multivariate
+                  analysis of variance},
+  journal =	 {Austral Ecology},
+  volume =	 26,
+  number =	 1,
+  pages =	 {32--46},
+  doi =		 {10.1111/j.1442-9993.2001.01070.pp.x},
+  year =	 2001
+}
+
+
+
 @Manual{R-base,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
