removed MicrobiomeExperiment dependency

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -22,8 +22,7 @@ processed data within the analysis workflows.
 
 Recently,
 [`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
-(`TSE`),
-[`MicrobiomeExperiment`](https://github.com/FelixErnst/MicrobiomeExperiment)
+(`TSE`)
 were developed to extend the `SE` and `SCE` class for incorporating hierarchical
 information (including phylogenetic tree) and reference sequences.
 
