--- a/book.bib
+++ b/book.bib
@@ -97,14 +97,6 @@
     note = {R package version 0.98.15},
 }
 
-@Manual{R-MicrobiomeExperiment,
-    title = {MicrobiomeExperiment: MicrobiomeExperiment},
-    author = {Felix G.M. Ernst and Nathan D. Olson and Levi Waldron and Marcel Ramos and Héctor {Corrada Bravo} and Jayaram Kancherla},
-    year = {2020},
-    note = {R package version 0.99.0.9014},
-    url = {https://github.com/FelixErnst/MicrobiomeExperiment},
-}
-
 @Manual{R-rmarkdown,
     title = {rmarkdown: Dynamic Documents for R},
     author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
@@ -143,6 +135,23 @@
     author = {Ruizhu Huang},
     year = {2020},
     note = {R package version 1.6.2},
+}
+
+@Manual{R-MultiAssayExperiment,
+  title = {MultiAssayExperiment: Software for the integration of multi-omics experiments in
+Bioconductor},
+  author = {Marcel Ramos and Levi Waldron},
+  year = {2020},
+  note = {R package version 1.16.0},
+  url = {http://waldronlab.io/MultiAssayExperiment/},
+}
+
+@Article{MultiAssayExperiment2017,
+  title = {Software For The Integration Of Multi-Omics Experiments In Bioconductor},
+  author = {Marcel Ramos and Lucas Schiffer and Angela Re and Rimsha Azhar and Azfar Basunia and Carmen Rodriguez Cabrera and Tiffany Chan and Philip Chapman and Sean Davis and David Gomez-Cabrero and Aedin C. Culhane and Benjamin Haibe-Kains and Kasper Hansen and Hanish Kodali and Marie Stephie Louis and Arvind Singh Mer and Markus Reister and Martin Morgan and Vincent Carey and Levi Waldron},
+  journal = {Cancer Research},
+  year = {2017},
+  volume = {77(21); e39-42},
 }
 
 @Manual{R-XVector,
