fixed the row/col bug in the text

--- a/18-multitable.Rmd
+++ b/18-multitable.Rmd
@@ -114,13 +114,13 @@ number of samples can differ between the elements.
 For information have a look at the [intro vignette](https://bioconductor.org/packages/release/bioc/vignettes/MultiAssayExperiment/inst/doc/MultiAssayExperiment.html) of the `MultiAssayExperiment` package.  
 
  
-   Option   Rows (samples)    Cols (features)               Recommended  
+   Option   Rows (features)    Cols (samples)               Recommended  
 ---------   --------------    ---------------  ------------------------
-   assays  	     match              match      Data transformations             
-   altExp            match              free    Alternative experiments   
-MultiAssay         mapping              free     Multi-omic experiments    
+   assays  	     match              match       Data transformations  
+   altExp             free              match    Alternative experiments  
+MultiAssay            free      free (mapping)    Multi-omic experiments    
 
-Table: (\#tab:options) **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that is of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (rows) is required but the alternative experiment tables can have different numbers of features (columns). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies.
+Table: (\#tab:options) **Recommended options for storing multiple data tables in microbiome studies** The _assays_ are best suited for data transformations (one-to-one match between samples and columns across the assays). The _alternative experiments_ are particularly suitable for alternative versions of the data that is of same type but may have a different number of features (e.g. taxonomic groups); this is for instance the case with taxonomic abundance tables agglomerated at different levels (e.g. genus vs. phyla) or alternative profiling technologies (e.g. amplicon sequencing vs. shallow shotgun metagenomics). For alternative experiments one-to-one match between samples (cols) is required but the alternative experiment tables can have different numbers of features (rows). Finally, elements of the _MultiAssayExperiment_ provide the most flexible way to incorporate multi-omic data tables with flexible numbers of samples and features. We recommend these conventions as the basis for methods development and application in microbiome studies.
 
 
 
