added text on data import

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -48,13 +48,15 @@ BiocManager::install("FelixErnst/mia")
 
 [`microbiome`](https://bioconductor.org/packages/devel/bioc/html/microbiome.html)
 
+
 ## Background
 
-The `phyloseq` package and class was around before the [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)  
+The widely used `phyloseq` package and class were around before the [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)  
 and the derived 
 [`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html) 
-class. To make the transition easy 
-here is short description how `phyloseq` and `*Experiment` classes relate to 
+class. Many methods for taxonomic profiling data are readily for the  `phyloseq` class structure. 
+
+In order to facilitate the transition, we provide here a short description how `phyloseq` and `*Experiment` classes relate to 
 each other.
 
 `assays`     : This slot is similar to `otu_table` in `phyloseq`. In a `SummarizedExperiment`
@@ -72,7 +74,53 @@ In this book, you will come across terms like `FeatureIDs` and `SampleIDs`.
 `colnames` are encouraged to be used, since they relate to actual objects we 
 work with.
 
+
+
 ## Loading experimental microbiome data
+
+
+### Importing data 
+
+
+TODO: data importer from standard CSV/TSV/tree files directly into `TSE`?
+
+Alternative input file formats: data from QIIME2 file formats can be
+directly imported in `TreeSummarizedExperiment` format. See
+`help(mia::makeTreeSummarizedExperimentFromqiime2)` for examples.
+
+
+### Conversions between data formats in R
+
+If the data is has already been imported in R in another format, it
+can be readily converted into `TreeSummarizedExperiment`, as shown in our next
+example. Note that similar conversion functions to
+`TreeSummarizedExperiment` are available for multiple data formats via
+the `mia` package (see makeTreeSummarizedExperimentFrom* for phyloseq,
+Biom, and DADA2).
+
+```{r, message=FALSE}
+library(mia)
+
+# phyloseq example data
+data(GlobalPatterns, package="phyloseq") 
+GlobalPatterns_phyloseq <- GlobalPatterns
+
+# convert phyloseq to TSE
+GlobalPatterns_TSE <- makeTreeSummarizedExperimentFromphyloseq(GlobalPatterns_phyloseq) 
+```
+
+
+We can also convert `TreeSummarizedExperiment` objects into `phyloseq`
+with respect to the shared components that are supported by both
+formats (i.e. taxonomic abundance table, sample metadata, taxonomic
+table, phylogenetic tree, sequence information). This is useful for
+instance when additional methods are available for `phyloseq`.
+
+TODO: conversion function from TSE to phyloseq
+
+
+
+
 
 ## Metadata
 
