WiP community plotting

--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -5,9 +5,65 @@ library(rebook)
 chapterPreamble()
 ```
 
+As diverse as themselves the description and analysis of microbiome communities
+can be performed in many different ways without a clear gold standard. In this
+chapter we will touch on several method, probably without being able to offer
+an exhaustive list of methods used. However, following the approaches shown here
+a start into any microbiome community analysis should be possible.
+
+The description of the community composition can be illuminating  in itself, 
+since interconnection between species can be assumed a priori. These connections
+most likely have as much meaning as the abundance of single bacterial species
+and thus warrant a closer look.
+
+## Core members of microbiome communities
+
+Depending on several factor such as sample type, experimental and measurement 
+factors, not every individual bacterial entry is detected in every sample.
+These blank spots might have meaning, but especially for low abundant entries
+the likelyhood is rather small.
+
+To focus on the species, which can be detected in most of the samples, 
+prevalence of each entry can be investigated in combination with other factors
+such as taxonomic levels or detection thresholds. `getPrevalence` and 
+`getPrevalentTaxa` are two functions from the [_`mia`_](R-mia) package, 
+which were introduced in an [earlier chapter](#microbiome-exploration).
+
+```{r}
+library(mia); library(microbiomeDataSets)
+se <- dietswap()
+core_taxa <- getPrevalentTaxa(se, detection = 0, prevalence = 0.5, rank = NULL)
+```
+
+The output of these function can be used to subset the data to the relevant
+taxa and squash the remaining result into an seperate entry.
+
+```{r}
+se_core <- se[core_taxa,]
+```
+
+To not remove the counts, which are not part of `getPrevalentTaxa`, the function
+`agglomerateByPrevalence` is available. The result contains all assay data with
+less prevalent entries squashed into a single row labeled as defined by the
+`other_label` argument.
+
+```{r}
+se_core <- agglomerateByPrevalence(se,
+                                   detection = 0,
+                                   prevalence = 0.5,
+                                   rank = NULL)
+```
+
+### Plotting prevalence
+
+In the previous example values for `detection` and `prevalence` were chosen
+without any prior knowledge. To gain insight how the result changes based on
+these setting, plotting functions are available from `miaViz`.
 
 
-## Community composition
+
+
+
 
 Heatmaps
 
